--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone:
 
 title: 0x3bs # the main title
 
-tagline: 0x3bs writeups # it will display as the subtitle
+tagline: 0x3bs Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   writeups , htb , hack the box , thm , try hack me , CTFs
